[project]
name = "dot"
version = "4.0.0"
description = "My dotfiles"
authors = [
    {name = "Tucker Beck", email ="tucker.beck@gmail.com"},
]
license-files = ["LICENSE.md"]
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "bidict>=0.23.1",
    "click>=8.1.8",
    "git-url-parse>=1.2.2",
    "gitpython>=3.1.44",
    "inflection>=0.5.1",
    "jira>=3.8.0",
    "keyring>=25.6.0",
    "keyrings-alt>=5.0.2",
    "loguru>=0.7.3",
    "pprintpp>=0.4.0",
    "py-buzz>=5.0.2",
    "pydon>=0.1.0",
    "pylint>=3.3.5",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "sh>=2.2.2",
    "toml>=0.10.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dot_tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.0.2",
]

[project.scripts]
duck = 'dot_tools.bin.duck:main'
configure-dot = 'dot_tools.bin.configure_dot:main'
checkout-branch-by-pattern = 'dot_tools.bin.checkout_branch_by_pattern:main'
current-branch = 'dot_tools.bin.current_branch:main'
find-source-file = 'dot_tools.bin.find_source_file:main'
find-test-file = 'dot_tools.bin.find_test_file:main'
gittop = 'dot_tools.bin.gittop:main'
make-branch = 'dot_tools.bin.make_branch:main'
dot-version = 'dot_tools.bin.version:main'
sep-bar = 'dot_tools.bin.sep_bar:main'
tag-version = 'dot_tools.bin.tag_version:main'
transpose = 'dot_tools.bin.transpose:main'
underlined-header = 'dot_tools.bin.underlined_header:main'
save-jira-password = 'dot_tools.bin.save_jira_password:main'
find-pyproject-toml = 'dot_tools.bin.find_pyproject_toml:main'
get-config-line-length = 'dot_tools.bin.get_config_line_length:main'

[tool.ruff]
line-length = 120
