[project]
name = "dot-tools"
version = "5.0.0"
description = "My dotfiles"
authors = [
    {name = "Tucker Beck", email ="tucker.beck@gmail.com"},
]
license-files = ["LICENSE.md"]
requires-python = ">=3.13"
dependencies = [
    "gitpython~=3.1",
    "loguru~=0.7",
    "pprintpp>=0.4.0",
    "py-buzz~=7.3",
    "pydantic>=2.11.4",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "snick>=2.2.0",
    "typer~=0.15",
    "typerdrive~=0.7",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "basedpyright~=1.29",
    "debugpy~=1.8",
    "ipython~=9.2",
    "mypy~=1.5",
    "pyclean~=3.1",
    "pytest~=8.3",
    "pytest-cov~=6.1",
    "pytest-mock~=3.14",
    "pytest-pretty~=1.2",
    "pytest-random-order~=1.1",
    "respx>=0.22.0",
    "ruff~=0.11",
    "typos~=1.32",
]

[project.scripts]
dt = "dot_tools.cli.main:cli"

[tool.pytest.ini_options]
addopts = [
    "--random-order",
    "--cov=src/dot_tools",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "--cov-report=xml:.coverage.xml",
    "--junitxml=.junit.xml",
    "--override-ini=junit_family=legacy",
]

[tool.ruff]
line-length = 120
src = ["src/dot_tools", "tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]
pretty = true
check_untyped_defs = true
files = ["src/dot_tools", "tests"]

[[tool.mypy.overrides]]
module = [
    "giturlparse",
]
ignore_missing_imports = true

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false

[build-system]
requires = ["uv_build>=0.7.6,<0.8.0"]
build-backend = "uv_build"
